--- a/src/layouts/styles/TwoColLayoutStyles.css
+++ b/src/layouts/styles/TwoColLayoutStyles.css
@@ -23,7 +23,7 @@
 @media screen and (max-width: 900px) {
   .content-container {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
     grid-template-columns: 1fr;
     column-gap: 100px;
     row-gap: 50px;
